[metadata]
name = danielw_example
version = attr: danielw_example.__version__
author = Daniel Williams
author_email = danielw@jfrog.com
description = An example python package that has a log emitter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danielw-jfrog/python-package-example
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.9
;install_requires =
;    docutils
;    BazSpam == 1.1

[options.packages.find]
where = .
include =
    danielw_example
